zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_scroll_to_bottom_action-6.snap
---
source: zellij-server/src/./unit/screen_tests.rs
assertion_line: 1484
expression: "format!(\"{}\", snapshot)"
---
00 (C): ┌ Pane #1 ────────────── SCROLL:  0/13 ┐┌ Pane #2 ─────────────────────────────┐
01 (C): │fill pane up with something 13        ││                                      │
02 (C): │fill pane up with something 14        ││                                      │
03 (C): │fill pane up with something 15        ││                                      │
04 (C): │fill pane up with something 16        ││                                      │
05 (C): │fill pane up with something 17        ││                                      │
06 (C): │fill pane up with something 18        ││                                      │
07 (C): │fill pane up with something 19        ││                                      │
08 (C): │                                      ││                                      │
09 (C): └──────────────────────────────────────┘└──────────────────────────────────────┘

