zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_scroll_to_bottom_action-7.snap
---
source: zellij-server/src/./unit/screen_tests.rs
assertion_line: 1486
expression: "format!(\"{}\", snapshot_count)"
---
6
