zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_scroll_to_bottom_action-8.snap
---
source: zellij-server/src/./unit/screen_tests.rs
assertion_line: 1268
expression: "format!(\"{}\", snapshot_count)"
---
7
