zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_scroll_to_bottom_action.snap
---
source: zellij-server/src/./unit/screen_tests.rs
expression: "format!(\"{}\", last_snapshot)"
---
00 (C): ─ Pane #1 ────────────── SCROLL:  0/12 │─ Pane #2 ──────────────────────────────
01 (C): fill pane up with something 12         │                                        
02 (C): fill pane up with something 13         │                                        
03 (C): fill pane up with something 14         │                                        
04 (C): fill pane up with something 15         │                                        
05 (C): fill pane up with something 16         │                                        
06 (C): fill pane up with something 17         │                                        
07 (C): fill pane up with something 18         │                                        
08 (C): fill pane up with something 19         │                                        
09 (C):                                        │
