zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_scroll_to_top_action-3.snap
---
source: zellij-server/src/./unit/screen_tests.rs
expression: "format!(\"{}\", snapshot)"
---
00 (C):              Pane #1  [ SCROLL: 12/12 ]│                 Pane #2                
01 (C): fill pane up with something 0          │                                        
02 (C): fill pane up with something 1          │                                        
03 (C): fill pane up with something 2          │                                        
04 (C): fill pane up with something 3          │                                        
05 (C): fill pane up with something 4          │                                        
06 (C): fill pane up with something 5          │                                        
07 (C): fill pane up with something 6          │                                        
08 (C): fill pane up with something 7          │                                        
09 (C): fill pane up with something 8          │
