zellij-server/src/unit/snapshots/zellij_server__screen__screen_tests__send_cli_scroll_up_action-5.snap
---
source: zellij-server/src/./unit/screen_tests.rs
assertion_line: 1175
expression: "format!(\"{}\", snapshot_count)"
---
4
